// grpc protocol of pixels worker vhive.

syntax = "proto3";
package pixels.proto;

option java_multiple_files = false;
option java_package = "io.pixelsdb.pixels.worker.vhive";
option java_outer_classname = "WorkerProto";

service WorkerService {
    rpc Aggregation (WorkerRequest) returns (WorkerResponse);
    rpc BroadcastChainJoin (WorkerRequest) returns (WorkerResponse);
    rpc BroadcastJoin (WorkerRequest) returns (WorkerResponse);
    rpc PartitionChainJoin (WorkerRequest) returns (WorkerResponse);
    rpc PartitionJoin (WorkerRequest) returns (WorkerResponse);
    rpc Partition (WorkerRequest) returns (WorkerResponse);
    rpc Scan (WorkerRequest) returns (WorkerResponse);
    rpc Hello (HelloRequest) returns (HelloResponse);
}

message WorkerRequest {
    string json = 1;
}

message WorkerResponse {
    string json = 1;
}

//message AggregationRequest {
//    string json = 1;
//}
//
//message AggregationResponse {
//    string json = 1;
//}
//
//message BroadcastChainJoinRequest {
//    string json = 1;
//}
//
//message BroadcastChainJoinResponse {
//    string json = 1;
//}
//
//message BroadcastJoinRequest {
//    string json = 1;
//}
//
//message BroadcastJoinResponse {
//    string json = 1;
//}
//
//message PartitionChainJoinRequest {
//    string json = 1;
//}
//
//message PartitionChainJoinResponse {
//    string json = 1;
//}
//
//message PartitionJoinRequest {
//    string json = 1;
//}
//
//message PartitionJoinResponse {
//    string json = 1;
//}
//
//message PartitionRequest {
//    string json = 1;
//}
//
//message PartitionResponse {
//    string json = 1;
//}
//
//message ScanRequest {
//    string json = 1;
//}
//
//message ScanResponse {
//    string json = 1;
//}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string output = 1;
}













